# PING

./: LICENSE  README.md  pipeline.py  plot.py  pyproject.toml
config/: problem_domain.json
problem/: domain.txt  dump2.txt  dump_nav.txt
src/: action.py  filtering.py  manager.py  model.py  ode.py  parser.py  post_processing.py
