[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-model-package"
version = "0.1.0"
description = "Generate valid solutions for constrained optimization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="Mahyar Jahani Nasab", email="mahyar.jahaninasab@gmail.com" }
]

dependencies = [
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "filelock>=3.13.1",
    "fonttools>=4.59.2",
    "fsspec>=2024.6.1",
    "Jinja2>=3.1.4",
    "kiwisolver>=1.4.5",
    "MarkupSafe>=2.1.5",
    "matplotlib>=3.10.0",
    "mpmath>=1.3.0",
    "networkx>=3.3",
    "numpy>=2.1.0",
    "packaging>=24.0",
    "pillow>=11.0.0",
    "pyparsing>=3.2.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.1",
    "shapely>=2.1.1",
    "six>=1.17.0",
    "sympy>=1.13.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "nvidia-ml-py>=12.535.0",
    "typing-extensions>=4.12.0"
]